# warehouse

./: .gitignore  CMakeLists.txt  README.md
example/: example.sqlite
include/: tab.hpp  warehouse.hpp
rc/: warehouse.qrc
src/: main.cpp  tab.cpp  warehouse.cpp
ui/: tab.ui  warehouse.ui
